Revert nav class to site-nav to resolve browser caching mismatch, restore vertical sidebar on mobile

--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -36,7 +36,7 @@
   }
 }
 
-.apple-nav {
+.site-nav {
   position: relative;
   width: 100%;
   display: flex;
